Flex gap fixes

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body {
   border: 0;
   background-color: transparent;
   flex-wrap: wrap;
-  row-gap: 0.625rem;
+  gap: 0.625rem;
   display: none;
 }
 
@@ -543,7 +543,7 @@ body {
   .regular-users {
     flex-direction: column-reverse;
     justify-content: center;
-    row-gap: 0.75rem;
+    gap: 0.75rem;
   }
 
   .regular-user {
